News UAT/force-app/main/default/objects/Discount_Threshold__c/Discount_Threshold__c.object-meta.xml
<CustomObject>
    <description>Discount Thresholds (%) are defined based on Client Pricing Tier level (e.g. “AAA”) per Platform (Print and Digital) and Sales User Job Title (Sales Manager, GSM, GM, etc).</description>
    <label>Discount Threshold</label>
    <nameField>
        <displayFormat>DT_{0000}</displayFormat>
        <label>Discount Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Thresholds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>