News UAT/force-app/main/default/objects/Discount_Threshold__c/fields/Amount_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Amount_Level_1__c</fullName>
    <description>Minimum Amount Level above which you need to go to Level 1 Approval</description>
    <inlineHelpText>Minimum Amount Level above which you need to go to Level 1 Approval</inlineHelpText>
    <label>$ Discount Level 1</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>