News UAT/force-app/main/default/objects/Discount_Threshold__c/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <description>Tier column of the Expected Annual Client Spend side of the Discount Threshold matrix, used for determining Discount Threshold percentage.</description>
    <inlineHelpText>Tier column of the Expected Annual Client Spend side of the Discount Threshold matrix, used for determining Discount Threshold percentage.</inlineHelpText>
    <label>Customer Tier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>