News UAT/force-app/main/default/objects/Discount_Threshold__c/fields/Discount_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level_1__c</fullName>
    <description>Starting point for Maximum Discount Threshold, also the Discount Level which needs 1st Level Approval if Proposed Discount is above value in this field.</description>
    <inlineHelpText>Starting point for Maximum Discount Threshold, also the Discount Level which needs 1st Level Approval if Proposed Discount is above value in this field.</inlineHelpText>
    <label>% Discount Level 1</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>