News UAT/force-app/main/default/objects/Discount_Threshold__c/fields/Discount_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level_3__c</fullName>
    <description>Discount Level which needs 3rd Level Approval if Proposed Discount is above value in this field</description>
    <inlineHelpText>Discount Level which needs 3rd Level Approval if Proposed Discount is above value in this field</inlineHelpText>
    <label>% Discount Level 3</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>