News UAT/force-app/main/default/objects/Discount_Threshold__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Platform column of the Expected Annual Client Spend side of the Discount Threshold matrix, used for determining Discount Threshold percentage.</description>
    <inlineHelpText>Platform column of the Expected Annual Client Spend side of the Discount Threshold matrix, used for determining Discount Threshold percentage.</inlineHelpText>
    <label>Platform</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>